# paintelf

./: .gitignore  .gitmodules  Cargo.toml  package_release.sh  readme.md
src/: binutil.rs  elf.rs  elf_container.rs  lib.rs  main.rs  matching.rs  tests.rs
src/elf/: container.rs  mod.rs
src/formats/: chr.rs  dispos.rs  lct.rs  mapid.rs  maplink.rs  mod.rs  shop.rs
src/util/: mod.rs  pointer.rs
