[package]
name = "paintelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
byteorder = "1.5.0"
indexmap = "2.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_bw = "2.4.0"
vivibin = { git = "https://github.com/Darxoon/vivibin", rev = "a6072f60" }
