[package]
name = "paintelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
byteorder = "1.5.0"
indexmap = "2.11.4"
indoc = "2.0.6"
memchr = "2.7.6"
miniserde = "0.1.43"
vivibin = { path = "vivibin" }

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"

[profile.release]
panic = "abort"
strip = true
lto = true
